Purchanse Order Item CRUD

--- a/easyfmis/easyfmis.csproj
+++ b/easyfmis/easyfmis.csproj
@@ -303,6 +303,18 @@
     <Compile Include="Forms\Software\TrnPurchaseOrder\TrnPurchaseOrderDetailForm.Designer.cs">
       <DependentUpon>TrnPurchaseOrderDetailForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Software\TrnPurchaseOrder\TrnPurchaseOrderDetailSearchItemForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnPurchaseOrder\TrnPurchaseOrderDetailSearchItemForm.Designer.cs">
+      <DependentUpon>TrnPurchaseOrderDetailSearchItemForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Software\TrnPurchaseOrder\TrnPurchaseOrderDetailPurchaseOrderItemDetailForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnPurchaseOrder\TrnPurchaseOrderDetailPurchaseOrderItemDetailForm.Designer.cs">
+      <DependentUpon>TrnPurchaseOrderDetailPurchaseOrderItemDetailForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Software\TrnReceivingReceipt\TrnReceivingReceiptForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -538,6 +550,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnPurchaseOrder\TrnPurchaseOrderDetailForm.resx">
       <DependentUpon>TrnPurchaseOrderDetailForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\TrnPurchaseOrder\TrnPurchaseOrderDetailSearchItemForm.resx">
+      <DependentUpon>TrnPurchaseOrderDetailSearchItemForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\TrnPurchaseOrder\TrnPurchaseOrderDetailPurchaseOrderItemDetailForm.resx">
+      <DependentUpon>TrnPurchaseOrderDetailPurchaseOrderItemDetailForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnReceivingReceipt\TrnReceivingReceiptForm.resx">
       <DependentUpon>TrnReceivingReceiptForm.cs</DependentUpon>
