--- a/easyfmis/packages.config
+++ b/easyfmis/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net461" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
 </packages>
