--- a/easyfmis/App.config
+++ b/easyfmis/App.config
@@ -1,22 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="easyfmis.Properties.Settings.easyfmisConnectionString"
-            connectionString="Data Source=localhost;Initial Catalog=easyfmis;Persist Security Info=True;User ID=sa"
-            providerName="System.Data.SqlClient" />
-        <add name="easyfmis.Properties.Settings.easyfmisConnectionString1"
-            connectionString="Data Source=localhost;Initial Catalog=easyfmis;User ID=sa"
-            providerName="System.Data.SqlClient" />
-        <add name="easyfmis.Properties.Settings.easyerpConnectionString"
-            connectionString="Data Source=localhost;Initial Catalog=easyerp;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="easyfmis.Properties.Settings.easyerpConnectionString1"
-            connectionString="Data Source=localhost;Initial Catalog=easyerp;Persist Security Info=True;User ID=sa"
-            providerName="System.Data.SqlClient" />
+        <add name="easyfmis.Properties.Settings.easyfmisConnectionString" connectionString="Data Source=localhost;Initial Catalog=easyfmis;Persist Security Info=True;User ID=sa" providerName="System.Data.SqlClient"/>
+        <add name="easyfmis.Properties.Settings.easyfmisConnectionString1" connectionString="Data Source=localhost;Initial Catalog=easyfmis;User ID=sa" providerName="System.Data.SqlClient"/>
+        <add name="easyfmis.Properties.Settings.easyerpConnectionString" connectionString="Data Source=localhost;Initial Catalog=easyerp;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="easyfmis.Properties.Settings.easyerpConnectionString1" connectionString="Data Source=localhost;Initial Catalog=easyerp;Persist Security Info=True;User ID=sa" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
 </configuration>
